# FdtdSimulator

./: .gitignore  CMakeLists.txt  README.md  fdtdCore.sln  genGrid.m  raw2movie.m
CudaCoreLib/: CudaCoreLib.vcxproj  gridInit.cu  stepping.cu  update.cu
JsonParser/: JSonParser.vcxproj  JsonDocument.cpp  JsonParser.cpp
MovieLib/: MovieLib.h
SimCuda3D/: Cuda_memory.cu  SimCuda3D.vcxproj  SimCudaFunctions.cu  kernels.cu
fdtdCore/: Makefile  abc.c  createresults.bat  ezInc.c  ezinc.h  ezincharm.c  fdtd-alloc.h  fdtd-grid.h  fdtd-macros.h  fdtd-protos.h  fdtd.h  fdtdCore.c  fdtdCore.psess  fdtdCore.sln  fdtdCore.vcxproj  fdtdCore141212.vsp  gridinit.c  ricker.c  snapshot.c  stepping.c  tfsf.c  update.c
fdtdCore/FdtdCoreTests/: FdtdCoreTests.cpp  FdtdCoreTests.vcxproj  ReadMe.txt
fdtdCore/FdtdCoreTests/samples/: bar.tif
fdtdCore/ipch/libtiff-41f8aa1f/: libtiff-6344ae6c.ipch
fdtdCore/lib/tiff-4.0.3/lib/: libtiff.lib  libtiff_i.lib
fdtdCoreLib/: .gitignore  CMakeLists.txt  fdtd-alloc.h  fdtd-macros.h  fdtd-protos.h  fdtdCoreLib.vcxproj  gridinit.cpp  ricker.cpp  stepping.cpp  update.cpp
include/: Cuda_fdtd-protos.h  Cuda_fdtd_alloc.h  Cuda_fdtd_macros.h  MovieLib.h  common_defs.h  fdtd-macros.h  fdtd-protos.h  fdtd-structs.h
include/JsonParser/: FileIO.h  JSonDocument.h  JSonParser.h
include/simCuda3D/: Cuda_constantMemoryData.h  Cuda_deviceFuncs.cu  Cuda_deviceFuncs.h  Cuda_grid.cpp  Cuda_grid.h  Cuda_macros.h  Cuda_memory.h  Cuda_protos.h  SimCudaFunctions.h
integrationTest/JsonParserTester/: JsonParserTester.cpp  JsonParserTester.vcxproj
runCudaFDTD/: ValidTestJson.txt  runCudaFDTD.vcxproj  runFDTD.cpp  runFDTD.cu
runFDTD/: .gitignore  CmakeLists.txt  runFDTD.cpp  runFDTD.vcxproj
runTester/: runTester.cpp  runTester.vcxproj
test/CudaTestSuite/: CudaTestSuite.vcxproj  SimCudaFunctionsTest.cpp
test/JsonParserTest/: JsonParserTest.cpp  JsonParserTest.vcxproj
test/testSuite/: JsonParserTest.cpp  MockFileIO.h  MockJsonDocument.h  testSuite.vcxproj
